--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-*.json
+# Ignore Streamlit secrets
+.streamlit/secrets.toml
+
+# Python cache files
+__pycache__/
+*.pyc
+
+# Virtual environment
+venv/
